--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{title_entry}}</h1>
+<h1>{{blog.title}}</h1>
 </br></br>
-<p>{{body_entry}}</p>
+<p>{{blog.body}}</p>
 
 {% endblock %}
