--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
+
 {% block content %}
-<center><h1>Blog Page</h1></center>
-    {% for blog in blogs %}
-    <ul>
-        <h2><a href='/blog_post?id={{ blog.id }}'>{{ blog.title }}</a></h2>
-        <p>{{ blog.body }}</p>
-        <hr/>
-    </ul>
-    {% endfor %}
+<h1>blog users!</h1>
+    {% if users|length == 0 %}
+    <p>No registered users yet</p>
+    {% else %}
+        <ul>
+        {% for user in users %}
+            <li><a href="/blog?user={{user.username}}">{{user.username}}</a></li>
+        {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock %}
