--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
+        <title>{{page_title}}</title>
         <style>
-            .error {color: red;}
+            .error{
+                color: red;
+            }
         </style>
-        <title>{{title}}</title>
     </head>
-<body>
-<a href = "/blog" />Main Blog Page</a>
-<a href = "/new_post"/>Add Entry</a>
 
-{% block content %}
-{% endblock %}
+<body>
+    <nav>
+      
+            <p><a href="/login">login</a>
+            <a href="/logout">logout</a>
+        
+            <a href="/">home</a>
+            <a href="/blog">all posts</a>
+            <a href="/blog/newpost">new post</a></p>
+        
+    </nav>
+
+    {% with messages = get_flashed_messages(with_categories=True) %}
+        <ul>
+        {% for category,message in messages %}
+            <li class="{{category}}">{{message}}</li>
+        {% endfor %}
+        </ul>
+    {% endwith %}
+
+    {% block content %}
+    {% endblock %}
 
 </body>
 </html>
